# android-non-root-demo

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle  update_dependences.sh
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: attrs.xml  (+2 more)
gradle/wrapper/: gradle-wrapper.properties
landmode/: build.gradle
landmode/src/main/: AndroidManifest.xml
xvsdk/: build.gradle  proguard-rules.pro
xvsdk/src/main/: .gitignore  AndroidManifest.xml
xvsdk/src/main/cpp/: CMakeLists.txt
xvsdk/src/main/cpp/include/: .gitignore  libusb.h
xvsdk/src/main/cpp/wrapper/: CMakeLists.txt  fps_count.hpp  xslam_android.cpp  yuv_to_rgb.cpp
xvsdk/src/main/cpp/xvsdk/: ChangeLog  README.md  deploy-arm64-v8a.sh  deploy-armeabi-v7a.sh  deploy-x86_64.sh
xvsdk/src/main/cpp/xvsdk/android/jni/: Android.mk  Application.mk  demo.mk  example.mk  exampledir.mk
xvsdk/src/main/cpp/xvsdk/doc/: annotated.html  classes.html  classxv_1_1Camera-members.html  classxv_1_1Camera.html  classxv_1_1CameraModel-members.html  classxv_1_1CameraModel.html  classxv_1_1ColorCamera-members.html  classxv_1_1ColorCamera.html  classxv_1_1Device-members.html  classxv_1_1Device.html  classxv_1_1DeviceStatusStream-members.html  classxv_1_1DeviceStatusStream.html  classxv_1_1Display-members.html  classxv_1_1Display.html  classxv_1_1EventStream-members.html  classxv_1_1EventStream.html  classxv_1_1ExternalStream-members.html  classxv_1_1ExternalStream.html  classxv_1_1EyetrackingCamera-members.html  classxv_1_1EyetrackingCamera.html  classxv_1_1FisheyeCameras-members.html  classxv_1_1FisheyeCameras.html  classxv_1_1FusionStream-members.html  classxv_1_1FusionStream.html  classxv_1_1GPSDistanceStream-members.html  classxv_1_1GPSDistanceStream.html  classxv_1_1GPSStream-members.html  classxv_1_1GPSStream.html  classxv_1_1GazeStream-members.html  classxv_1_1GazeStream.html  classxv_1_1GestureStream-members.html  classxv_1_1GestureStream.html  classxv_1_1GestureStreamEX-members.html  classxv_1_1GestureStreamEX.html  classxv_1_1ImuSensor-members.html  classxv_1_1ImuSensor.html  classxv_1_1MicStream-members.html  classxv_1_1MicStream.html  classxv_1_1ObjectDetector-members.html  classxv_1_1ObjectDetector.html  (+374 more)
xvsdk/src/main/cpp/xvsdk/doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+54 more)
xvsdk/src/main/cpp/xvsdk/examples/: frequency_counter.hpp  slam_edge_example.cpp  slam_example.cpp  tof_example.cpp
xvsdk/src/main/cpp/xvsdk/examples/all_stream/: CMakeLists.txt  CMakeLists.txt.in  all_stream.cpp  colors.h  fps_count.hpp  raw2opencv.cpp
xvsdk/src/main/cpp/xvsdk/examples/demo-api/: CMakeLists.txt  CMakeLists.txt.in  demo-api.cpp  pipe_srv.cpp  pipe_srv.h
xvsdk/src/main/cpp/xvsdk/examples/slam_3dof_display_calib/: CMakeLists.txt.in  slam_3dof_display_calib.cpp
xvsdk/src/main/cpp/xvsdk/include/: unity-wrapper.h  xv-sdk.h  xv-types.h
xvsdk/src/main/cpp/xvsdk/include/opencv2/: opencv_modules.hpp
xvsdk/src/main/cpp/xvsdk/include2/: xv-player.h  xv-sdk-ex.h  xv-sdk-private.h
xvsdk/src/main/cpp/xvsdk/unity-wrapper/: CMakeLists.txt  build.bat  unity-wrapper.cpp
xvsdk/src/main/cpp/xvsdk/unity-wrapper/android/jni/: Android.mk  Application.mk  prebuild.mk  xvsdk.mk
(+42 files in other folders)
